--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
   "peerDependencies": {
     "typescript": "^5"
   },
+  "scripts": {
+    "start": "pm2 start index.ts --name cdn && pm2 logs cdn",
+    "stop": "pm2 stop all",
+    "restart": "pm2 stop all && pm2 start"
+  },
   "dependencies": {
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
     "hono": "^4.9.2",
+    "pm2": "^6.0.8",
     "telegraf": "^4.16.3"
   }
 }
