--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "restart": "pm2 stop all && pm2 start"
   },
   "dependencies": {
+    "@hono/node-server": "^1.18.2",
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
     "hono": "^4.9.2",
