--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "form-data": "^4.0.4",
     "hono": "^4.9.2",
+    "mime-types": "^3.0.1",
     "pm2": "^6.0.8",
     "telegraf": "^4.16.3"
   }
