--- a/package.json
+++ b/package.json
@@ -1,25 +1,20 @@
 {
   "name": "cdn",
-  "module": "index.ts",
+  "version": "1.0.0",
+  "main": "index.js",
   "type": "module",
   "private": true,
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
   "scripts": {
-    "start": "pm2 start index.ts --name cdn && pm2 logs cdn",
-    "stop": "pm2 stop all",
-    "restart": "pm2 stop all && pm2 start"
+    "start": "pm2 start index.js --name cdn && pm2 logs cdn",
+    "stop": "pm2 stop cdn",
+    "restart": "pm2 restart cdn"
   },
   "dependencies": {
-    "@hono/node-server": "^1.18.2",
     "axios": "^1.11.0",
-    "form-data": "^4.0.4",
-    "hono": "^4.9.2",
-    "pm2": "^6.0.8",
-    "telegraf": "^4.16.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
+    "pm2": "^6.0.8"
   }
 }
